runs/runs/github.com/ozguramac/MITDataScience-CaseStudy6.1/logs/test-notebook-uk_retail_case_study.ipynb-2020-07-13T10.58.txt
[I 200713 10:59:04 inrepo:36] Testing notebook uk_retail_case_study.ipynb
[W 200713 10:59:05 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200713 10:59:05 inrepo:60] Using kernel python3 to provide language: python
[I 200713 10:59:05 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
import featuretools as ft
from utils import (find_training_examples, load_uk_retail_data, 
                   engineer_features_uk_retail, preview, feature_importances)
import pandas as pd
from sklearn.model_selection import train_test_split
from sklearn.preprocessing import Imputer
from sklearn.ensemble import RandomForestClassifier
from sklearn.metrics import confusion_matrix
ft.__version__
------------------

Traceback [0;36m(most recent call last)[0m:

  File [1;32m"/srv/conda/envs/notebook/lib/python3.7/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m3319[0m, in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

[0;36m  File [0;32m"<ipython-input-1-cd4f35da53cf>"[0;36m, line [0;32m2[0;36m, in [0;35m<module>[0;36m[0m
[0;31m    from utils import (find_training_examples, load_uk_retail_data,[0m

[0;36m  File [0;32m"/home/vildeeide/utils.py"[0;36m, line [0;32m27[0m
[0;31m    print "%d: Feature: %s, %.3f" % (i+1, f[0], f[1])[0m
[0m                                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (utils.py, line 27)


Container exited with status: {'Error': None, 'StatusCode': 1}
